// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Audit Detailspage tests > should render full Detailspage 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c22 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.c24 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

.c25 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c27 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

.c30 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c32 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

.c8 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c4 {
  margin-left: -10px;
}

.c4>* {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c4>* {
  margin-left: 10px;
}

.c6 {
  margin-left: -5px;
}

.c6>* {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c6>* {
  margin-left: 5px;
}

.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c9 {
  cursor: pointer;
}

.c10 svg path {
  fill: #bfbfbf;
}

.c7 {
  height: 16px;
  width: 16px;
  line-height: 16px;
}

.c7 * {
  height: inherit;
  width: inherit;
}

.c19 {
  height: 50px;
  width: 50px;
  line-height: 50px;
}

.c19 * {
  height: inherit;
  width: inherit;
}

.c14 {
  margin: 10px 0px;
  padding-bottom: 1px;
  border-bottom: 2px solid #e5e5e5;
  position: relative;
}

.c15 {
  margin: 0 0 1px 0;
}

.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

.c18 {
  margin-right: 5px;
}

.c20 {
  word-break: break-all;
  min-width: 100px;
}

.c28 {
  font-size: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding-left: 8px;
  padding-right: 8px;
  padding-bottom: 2px;
  padding-top: 2px;
  border-left: 1px solid #f3f3f3;
  border-right: 1px solid #e5e5e5;
  cursor: pointer;
  background-color: #f3f3f3;
  border-bottom: 1px solid #f3f3f3;
  margin-bottom: -2px;
  border-top: 2px solid #11ab51;
}

.c28:hover {
  border-top: 2px solid #11ab51;
}

.c28:first-child {
  border-left: 1px solid #e5e5e5;
}

.c29 {
  font-size: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding-left: 8px;
  padding-right: 8px;
  padding-bottom: 2px;
  padding-top: 2px;
  border-left: 1px solid #fff;
  border-right: 1px solid #e5e5e5;
  cursor: pointer;
  border-top: 2px solid #fff;
}

.c29:hover {
  border-top: 2px solid #e5e5e5;
}

.c29:first-child {
  border-left: 1px solid #fff;
}

.c26 {
  border-bottom: 2px solid #11ab51;
  margin-top: 30px;
  margin-bottom: 15px;
}

.c33 {
  border: 0;
  border-spacing: 0px;
  font-size: 12px;
  text-align: left;
  table-layout: auto;
}

.c43 {
  border: 0;
  border-spacing: 0px;
  font-size: 12px;
  text-align: left;
  table-layout: auto;
  width: 100%;
}

.c42>*:not(:last-child)::after {
  content: '•';
  margin-left: 5px;
}

.c34 td {
  padding: 4px 4px 4px 0;
}

.c34 tr td:first-child {
  padding-right: 5px;
}

.c23 {
  border-spacing: 0px;
  color: #7F7F7F;
  font-size: 10px;
}

.c23 :nth-child(even) {
  margin-left: 3px;
}

.c23 :nth-child(odd) {
  margin-left: 30px;
}

.c35 {
  width: 10%;
}

.c36 {
  width: 90%;
}

.c31 {
  font-size: 0.7em;
}

.c38 {
  height: 13px;
  box-sizing: content-box;
  display: inline-block;
  width: 100px;
  background: #4C4C4C;
  vertical-align: middle;
  text-align: center;
}

.c40 {
  z-index: 1;
  font-weight: bold;
  color: #fff;
  font-size: 9px;
  margin: 0;
  position: relative;
  top: -13px;
  padding-top: 1px;
}

.c39 {
  height: 13px;
  width: 100%;
  background: #4f91c7;
}

.c41 {
  white-space: nowrap;
}

.c37:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c11 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-right: 0px;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: absolute;
  font-size: 10px;
  background-color: red;
  font-weight: bold;
  border-radius: 10px;
  min-width: 10px;
  padding: 3px 5px;
  z-index: 1;
  background-color: #11ab51;
  color: #fff;
  bottom: -8px;
  right: 0px;
}

@media print {
  .c9 {
    display: none;
  }
}

@media print {
  .c33 {
    border-collapse: collapse;
  }
}

@media print {
  .c43 {
    border-collapse: collapse;
  }
}

@media print {
  .c38 {
    background: none;
    border: 0;
  }
}

@media print {
  .c40 {
    color: black;
  }
}

@media print {
  .c39 {
    background: none;
  }
}

<div
  class="c0"
>
  <div
    class="c1 toolbar"
  >
    <div
      class="c2 c3"
    >
      <div
        class="c2 c4"
      >
        <div
          class="c2 c3"
        >
          <div
            class="c5 c6"
          >
            <a
              href="test/en/compliance-and-special-scans.html#configuring-and-managing-audits"
              rel="noopener noreferrer"
              target="_blank"
            >
              <span
                class="c7"
                data-testid="svg-icon"
                title="Help: Audits"
              >
                <svg
                  height="1em"
                  title="Help: Audits"
                  viewBox="0 0 67.733 67.733"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    transform="translate(0 -229.27)"
                  >
                    <g
                      transform="matrix(2.0878 0 0 2.2337 41.673 -337.41)"
                    >
                      <path
                        class="gui_icon_class"
                        d="m128 0.0078125c-70.26 0-128.01 57.023-128.01 127.98 0 70.961 57.75 128 128.01 128s127.99-57.041 127.99-128c0-70.961-57.734-127.98-127.99-127.98zm0 18.615c61.514 0 110.6 49.228 110.6 109.37 0 60.141-49.082 109.38-110.6 109.38-61.514 0-110.59-49.244-110.59-109.38 0-60.141 49.08-109.37 110.59-109.37zm0 32.318c-25.902 0-48.008 21.06-48.008 47.998h21.27c1e-5 -13.514 11.367-25.244 26.738-25.244s26.725 11.73 26.725 25.244-11.354 25.244-26.725 25.244v0.1211h-11.004v40.078h22v-18.746c20.858-4.9593 36.996-23.676 36.996-46.697 0-26.938-22.091-47.998-47.992-47.998zm-11.004 132.12v22h22v-22h-22z"
                        transform="matrix(.12673 0 0 .11845 -19.96 253.7)"
                      />
                    </g>
                  </g>
                </svg>
              </span>
            </a>
            <a
              class="c8"
              href="/audits"
            >
              <span
                class="c7"
                data-testid="svg-icon"
                title="Audit List"
              >
                <svg
                  height="1em"
                  title="Audit List"
                  viewBox="0 0 67.733 67.733"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    transform="translate(0 -229.27)"
                  >
                    <path
                      class="gui_icon_class"
                      d="m0 0v16h16v-16h-16zm64 0v16h192v-16h-192zm-64 48v16h16v-16h-16zm64 0v16h192v-16h-192zm-64 48v16h16v-16h-16zm64 0v16h192v-16h-192zm-64 48v16h16v-16h-16zm64 0v16h192v-16h-192zm-64 48v16h16v-16h-16zm64 0v16h192v-16h-192zm0 47.91v16.09h192v-16.09h-192zm-64 0.08984v16h16v-16h-16z"
                      transform="matrix(.26458 0 0 .26458 0 229.27)"
                    />
                  </g>
                </svg>
              </span>
            </a>
            <span
              class="c7"
              data-testid="svg-icon"
              title="This is an Alterable Audit. Reports may not relate to current Policy or Target!"
            >
              <svg
                height="1em"
                title="This is an Alterable Audit. Reports may not relate to current Policy or Target!"
                viewBox="0 0 67.733 67.733"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  transform="translate(0 -229.27)"
                >
                  <path
                    class="gui_icon_class"
                    d="m221.48-0.048828-137.1 137.1-16.971 50.912 50.912-16.971 137.1-137.1-33.941-33.943zm-221.48 16.049v240h192v-128h-16.006v112.01h-160v-208.01h144.01v-15.996h-160zm221.48 6.5781 11.316 11.316-123.12 123.12-16.979 5.6602 5.6621-16.977 123.12-123.12z"
                    transform="matrix(.26458 0 0 .26458 0 229.27)"
                  />
                </g>
              </svg>
            </span>
          </div>
        </div>
        <div
          class="c2 c3"
        >
          <div
            class="c2 c6"
          >
            <span
              class="c9 c7"
              data-testid="svg-icon"
              title="Clone Audit"
            >
              <svg
                height="1em"
                title="Clone Audit"
                viewBox="0 0 67.733 67.733"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  transform="translate(0 -229.27)"
                >
                  <g
                    transform="matrix(2.0878 0 0 2.2337 41.673 -337.41)"
                  >
                    <path
                      class="gui_icon_class"
                      d="m141.4 30.168c-1.4823-0.007128-2.9616 0.058813-4.4277 0.19531-11.954 1.113-24.138 7.7033-30.455 19.439-3.1389-1.2367-6.4575-1.9437-9.7246-2.0273-6.9908-0.17898-14.065 1.7188-20.543 5.0117-6.4783 3.293-12.405 8.008-16.613 14.264-4.208 6.2557-6.5548 14.557-4.6406 22.984l1.2305 2.5137c-3.9083-2.1455-8.4203-3.0951-13.154-3.0645-22.218 0.1437-49.323 21.857-41.805 42.627 6.5566 18.113 33.687 25.742 51.877 17.924l-1.6309 8.3789c8.3106 16.995 22.298 28.418 36.08 32.994 2.2111 0.73419 4.4295 1.2763 6.6406 1.6367l2.3809 31.088h16.699l2.1504-36.199c0.59144-0.51742 1.168-1.059 1.7188-1.6367 1.0854 0.71505 1.6102 1.7819 2.8672 2.5215 4.895 2.8803 10.954 5.4562 17.707 6.5469 6.7531 1.0907 14.352 0.64667 21.453-3.1328 5.0524-2.689 9.2812-7.6487 12.932-13.637 4.2379 2.5642 8.7392 4.5584 13.369 5.8047l3.4434 39.473h16.699l0.50195-39.367c12.105-3.3622 22.875-12.778 27.693-26.949 5.323-3.9336 10.102-8.8803 13.656-15.482 4.1614-7.7308 7.1974-16.744 8.1367-25.971 0.93933-9.2265-0.24635-18.982-5.5938-27.008-4.2192-6.3321-11.496-10.234-20.082-12.367-1.078-15.688-10.766-29.391-23.041-36.885-7.1074-4.3388-15.248-6.7759-23.488-5.5566-5.0031 0.74038-9.6574 3.5063-13.885 7.2383-7.2505-7.7007-17.777-11.308-28.152-11.357zm-1.1484 16.566c9.6588-0.26618 18.616 4.1856 21.471 10.951l13.701 0.82422c3.0058-5.4246 6.1954-7.2504 10.127-7.832 3.9316-0.58167 8.9212 0.6187 13.715 3.5449 9.5874 5.8526 16.946 17.994 15.736 27.799l7.1055 9.332c8.8204 0.69901 12.888 3.6439 15.35 7.3379 2.4614 3.694 3.4632 9.1624 2.8047 15.631-0.65857 6.4685-3.0136 13.637-6.1641 19.49s-7.2404 10.282-9.9102 11.822l-3.7754 5.0293c-2.7665 10.458-10.248 16.202-19.559 18.17-9.3106 1.9676-19.852-0.694-26.354-7.0234l-12.346 2.9512c-2.8351 7.32-6.2459 10.738-9.832 12.646-3.5862 1.9086-7.7828 2.3215-12.252 1.5996-4.4692-0.7218-9.0518-2.617-12.561-4.6816-3.5088-2.0646-6.1567-5.1549-5.625-4.2715l-13.84 1.8476c-0.87687 2.7976-1.9448 3.7186-4.4707 4.5176-2.526 0.79948-6.6576 0.74492-11.389-0.82617-8.2912-2.7532-17.465-10.54-23.934-20.873 8.2134-9.2351 13.878-19.863 14.562-31.428 0.76866-12.994-4.0708-26.013-12.699-37.561-0.6001-3.1117-0.06326-5.8298 2.082-9.0195 2.2398-3.3298 6.1823-6.6767 10.695-8.9707 4.513-2.294 9.5525-3.514 13.531-3.4121 3.9788 0.10215 6.4642 1.3098 7.875 3.082l13.516-3.9238c1.7112-10.295 10.121-15.671 20.498-16.637 0.64856-0.060382 1.2955-0.099441 1.9395-0.11719zm-92.283 56.48a9.335 9.6514 0 0 1 4.1699 10.605 9.335 9.6514 0 0 1-8.5586 7.2617 9.335 9.6514 0 0 1-9.248-6.2969 9.335 9.6514 0 0 1 3.0762-10.998l10.561-0.57227z"
                      transform="matrix(.12673 0 0 .11845 -19.96 253.7)"
                    />
                  </g>
                </g>
              </svg>
            </span>
            <span
              class="c9 c7"
              data-testid="svg-icon"
              title="Edit Audit"
            >
              <svg
                height="1em"
                title="Edit Audit"
                viewBox="0 0 67.733 67.733"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  transform="translate(0 -229.27)"
                >
                  <path
                    class="gui_icon_class"
                    d="m221.48-0.048828-137.1 137.1-16.971 50.912 50.912-16.971 137.1-137.1-33.941-33.943zm-221.48 16.049v240h192v-128h-16.006v112.01h-160v-208.01h144.01v-15.996h-160z"
                    transform="matrix(.26458 0 0 .26458 0 229.27)"
                  />
                </g>
              </svg>
            </span>
            <span
              class="c9 c7"
              data-testid="svg-icon"
              title="Move Audit to trashcan"
            >
              <svg
                height="1em"
                title="Move Audit to trashcan"
                viewBox="0 0 67.733 67.733"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  transform="translate(0 -229.27)"
                >
                  <g
                    transform="matrix(2.0878 0 0 2.2337 41.673 -337.41)"
                  >
                    <path
                      class="gui_icon_class"
                      d="m80 0v16 16h-80v16h256v-16h-80v-16-16h-96zm16 16h64v16h-64v-16zm-80 48 16.975 192.27h190.04l16.982-192.27h-16l-16 176h-160l-16-176h-16zm72 0v160h16v-160h-16zm64 0v160h16v-160h-16z"
                      transform="matrix(.12673 0 0 .11845 -19.96 253.7)"
                    />
                  </g>
                </g>
              </svg>
            </span>
            <span
              class="c9 c7"
              data-testid="svg-icon"
              title="Export Audit as XML"
            >
              <svg
                height="1em"
                title="Export Audit as XML"
                viewBox="0 0 67.733 67.733"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  transform="translate(0 -229.27)"
                >
                  <path
                    class="gui_icon_class"
                    d="m182.84 0-22.627 22.627 34.912 34.912 0.00586 0.41797c-52.297 0.87749-90.488 16.002-114.25 45.082-24.491 29.975-32.506 71.388-32.887 120.84l32.002 0.25c0.35407-46.001 8.3412-79.632 25.666-100.84 16.754-20.505 43.317-32.56 89.543-33.332l-35.123 35.121 22.627 22.629 73.539-73.539-0.25-0.25 0.37891-0.37891-73.539-73.539zm-182.84 63.996v192h240v-48h-15.996v32.004h-208.01v-160h48.004v-16.004h-64z"
                    transform="matrix(.26458 0 0 .26458 0 229.27)"
                  />
                </g>
              </svg>
            </span>
          </div>
        </div>
        <div
          class="c2 c3"
        >
          <div
            class="c2 c6"
          >
            <span
              class="c9 c7"
              data-testid="svg-icon"
              title="Start"
            >
              <svg
                height="1em"
                title="Start"
                viewBox="0 0 67.733 67.733"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  transform="translate(0 -229.27)"
                >
                  <g
                    transform="matrix(2.0878 0 0 2.2337 41.673 -337.41)"
                  >
                    <path
                      class="gui_icon_class"
                      d="m16.008 0.32031v255.46l12.791-7.2891 211.29-120.45zm16.104 27.708 179.77 99.972-179.77 100.03z"
                      transform="matrix(.12673 0 0 .11845 -19.96 253.7)"
                    />
                  </g>
                </g>
              </svg>
            </span>
            <span
              alt="Resume"
              class="c10 c7"
              data-testid="svg-icon"
              title="Audit is not stopped"
            >
              <svg
                height="1em"
                title="Audit is not stopped"
                viewBox="0 0 67.733 67.733"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  transform="translate(0 -229.27)"
                >
                  <g
                    transform="matrix(2.0878 0 0 2.2337 41.673 -337.41)"
                  >
                    <path
                      class="gui_icon_class"
                      d="m0 0v256h48v-256h-48zm64 0.32031v255.46l192.09-127.74-192.09-127.72zm-48 15.68h16v224h-16v-224zm64 13.643 152 98.357-151.71 98.945-0.29492-197.3z"
                      transform="matrix(.12673 0 0 .11845 -19.96 253.7)"
                    />
                  </g>
                </g>
              </svg>
            </span>
          </div>
        </div>
        <div
          class="c2 c3"
        >
          <div
            class="c2 c4"
          >
            <div
              class="c2 c3"
            >
              <div
                class="c2 c6"
              >
                <a
                  class="c8"
                  data-testid="details-link"
                  href="/report/1234"
                  title="Last Report for Audit foo from 07/30/2019"
                >
                  <span
                    class="c7"
                    data-testid="svg-icon"
                  >
                    <svg
                      height="1em"
                      viewBox="0 0 67.733 67.733"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <g
                        transform="translate(0 -229.27)"
                      >
                        <g
                          transform="matrix(2.0878 0 0 2.2337 41.673 -337.41)"
                        >
                          <path
                            class="gui_icon_class"
                            d="m126 0v0.033203c-68.692 1.0632-124.92 56.609-125.98 125.97h-0.019531v1.5391c-5.2597e-4 0.15137-0.0058594 0.30163-0.0058594 0.45313 0 0.15149 0.0053334 0.30176 0.0058594 0.45312v1.5547h0.019531c1.0782 70.024 58.387 125.99 127.98 125.99v0.00586h16 112v-16-96-16h-0.00195v-0.00781c0-27.723-8.8123-53.318-23.74-74.217a128 128 0 0 0-0.58593-0.79883c-2.2415-3.0874-4.6102-6.0752-7.1113-8.9453a128 128 0 0 0-1.1602-1.3008c-2.3961-2.6756-4.8982-5.2535-7.5078-7.7188a128 128 0 0 0-1.5645-1.4512c-2.6165-2.3911-5.3333-4.6741-8.1406-6.8438a128 128 0 0 0-1.5879-1.2129c-2.9306-2.1931-5.9609-4.2571-9.0762-6.1973a128 128 0 0 0-1.2832-0.79883c-3.326-2.0174-6.7548-3.8819-10.268-5.5957a128 128 0 0 0-0.66602-0.33008c-3.7366-1.7961-7.5725-3.4166-11.496-4.8496a128 128 0 0 0-0.03125-0.013672v0.0019531c-13.085-4.7752-27.151-7.462-41.779-7.6875v-0.033203h-4zm4 18.646c12.46 0.2164 24.388 2.4537 35.477 6.3887l-10.115 27.789c-7.9536-2.9007-16.486-4.5744-25.361-4.793v-29.385zm-4 0.001954v29.383c-42.375 1.0478-76.93 35.238-77.975 77.969h-30.59c1.0589-58.579 48.671-106.31 108.56-107.35zm0 39.746v29.664c-20.288 1.0121-36.94 17.306-37.953 37.941h-30.33c1.0448-36.753 30.821-66.572 68.283-67.605zm4 0c7.6686 0.21072 15.017 1.6138 21.861 4.0508l-10.184 27.977c-3.6814-1.3451-7.6061-2.1629-11.678-2.3652v-29.662zm98.07 22.941c6.7555 14.172 10.529 29.994 10.529 46.656v0.00781h-30.594v-0.00781c0-12.099-2.7025-23.542-7.502-33.801l27.566-12.855zm-36.426 16.986c4.2842 9.0136 6.6836 19.071 6.6836 29.67 0 0.00261 1e-5 0.00519 0 0.00781h-30.33v-0.00781c0-6.057-1.3541-11.774-3.752-16.895l27.398-12.775zm-65.645 0.09375v27.584h-28.25c0.99648-14.674 12.906-26.619 28.25-27.584zm4 0c2.8606 0.17912 5.602 0.7377 8.1758 1.627l-8.1758 22.463v-24.09zm25.395 16.809c1.8884 3.8788 2.9394 8.2136 2.9394 12.768 0 0.00261 1e-5 0.00519 0 0.00781h-14.334-14v-0.93359l25.395-11.842zm-137.96 14.775h30.592c1.0688 43.394 36.696 77.992 79.973 77.994v29.383c-60.826-0.00206-109.49-48.154-110.56-107.38zm40.281 0h30.33c1.0538 21.303 18.776 37.992 39.953 37.994v29.662c-38.394-0.00206-69.212-30.256-70.283-67.656zm40.035 0h30.248v27.656c-16.294-0.00198-29.201-12.355-30.248-27.656zm46.248 14h96v96h-96v-96zm16 16v16h64v-16h-64zm0 32v16h64v-16h-64z"
                            transform="matrix(.12673 0 0 .11845 -19.96 253.7)"
                          />
                        </g>
                      </g>
                    </svg>
                  </span>
                </a>
                <a
                  class="c8"
                  href="/reports?filter=task_id%3D12345"
                  title="Total Reports for Audit foo"
                >
                  <div
                    class="c11"
                  >
                    <span
                      class="c7"
                      data-testid="svg-icon"
                    >
                      <svg
                        height="1em"
                        viewBox="0 0 67.733 67.733"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <g
                          transform="translate(0 -229.27)"
                        >
                          <g
                            transform="matrix(2.0878 0 0 2.2337 41.673 -337.41)"
                          >
                            <path
                              class="gui_icon_class"
                              d="m126 0v0.033203c-68.692 1.0632-124.92 56.609-125.98 125.97h-0.019531v1.5391c-5.2597e-4 0.15137-0.0058594 0.30163-0.0058594 0.45313 0 0.15149 0.0053334 0.30176 0.0058594 0.45312v1.5547h0.019531c1.0782 70.024 58.387 125.99 127.98 125.99v0.00586h16 112v-16-96-16h-0.00195v-0.00781c0-27.723-8.8123-53.318-23.74-74.217a128 128 0 0 0-0.58593-0.79883c-2.2415-3.0874-4.6102-6.0752-7.1113-8.9453a128 128 0 0 0-1.1602-1.3008c-2.3961-2.6756-4.8982-5.2535-7.5078-7.7188a128 128 0 0 0-1.5645-1.4512c-2.6165-2.3911-5.3333-4.6741-8.1406-6.8438a128 128 0 0 0-1.5879-1.2129c-2.9306-2.1931-5.9609-4.2571-9.0762-6.1973a128 128 0 0 0-1.2832-0.79883c-3.326-2.0174-6.7548-3.8819-10.268-5.5957a128 128 0 0 0-0.66602-0.33008c-3.7366-1.7961-7.5725-3.4166-11.496-4.8496a128 128 0 0 0-0.03125-0.013672v0.0019531c-13.085-4.7752-27.151-7.462-41.779-7.6875v-0.033203h-4zm4 18.646c12.46 0.2164 24.388 2.4537 35.477 6.3887l-10.115 27.789c-7.9536-2.9007-16.486-4.5744-25.361-4.793v-29.385zm-4 0.001954v29.383c-42.375 1.0478-76.93 35.238-77.975 77.969h-30.59c1.0589-58.579 48.671-106.31 108.56-107.35zm0 39.746v29.664c-20.288 1.0121-36.94 17.306-37.953 37.941h-30.33c1.0448-36.753 30.821-66.572 68.283-67.605zm4 0c7.6686 0.21072 15.017 1.6138 21.861 4.0508l-10.184 27.977c-3.6814-1.3451-7.6061-2.1629-11.678-2.3652v-29.662zm98.07 22.941c6.7555 14.172 10.529 29.994 10.529 46.656v0.00781h-30.594v-0.00781c0-12.099-2.7025-23.542-7.502-33.801l27.566-12.855zm-36.426 16.986c4.2842 9.0136 6.6836 19.071 6.6836 29.67 0 0.00261 1e-5 0.00519 0 0.00781h-30.33v-0.00781c0-6.057-1.3541-11.774-3.752-16.895l27.398-12.775zm-65.645 0.09375v27.584h-28.25c0.99648-14.674 12.906-26.619 28.25-27.584zm4 0c2.8606 0.17912 5.602 0.7377 8.1758 1.627l-8.1758 22.463v-24.09zm25.395 16.809c1.8884 3.8788 2.9394 8.2136 2.9394 12.768 0 0.00261 1e-5 0.00519 0 0.00781h-14.334-14v-0.93359l25.395-11.842zm-137.96 14.775h30.592c1.0688 43.394 36.696 77.992 79.973 77.994v29.383c-60.826-0.00206-109.49-48.154-110.56-107.38zm40.281 0h30.33c1.0538 21.303 18.776 37.992 39.953 37.994v29.662c-38.394-0.00206-69.212-30.256-70.283-67.656zm40.035 0h30.248v27.656c-16.294-0.00198-29.201-12.355-30.248-27.656zm46.248 14h96v96h-96v-96zm16 16v16h64v-16h-64zm0 32v16h64v-16h-64z"
                              transform="matrix(.12673 0 0 .11845 -19.96 253.7)"
                            />
                          </g>
                        </g>
                      </svg>
                    </span>
                    <span
                      class="c12"
                      data-testid="badge-icon"
                    >
                      1
                    </span>
                  </div>
                </a>
              </div>
            </div>
            <a
              class="c8"
              href="/results?filter=task_id%3D12345"
              title="Results for Audit foo"
            >
              <div
                class="c11"
              >
                <span
                  class="c7"
                  data-testid="svg-icon"
                >
                  <svg
                    height="1em"
                    viewBox="0 0 67.733 67.733"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g
                      transform="translate(0 -229.27)"
                    >
                      <g
                        transform="matrix(2.0878 0 0 2.2337 41.673 -337.41)"
                      >
                        <path
                          class="gui_icon_class"
                          d="m126 0v0.033203c-68.692 1.0632-124.92 56.609-125.98 125.97h-0.019531v1.5391c-5.2597e-4 0.15137-0.0058594 0.30163-0.0058594 0.45313 0 0.15149 0.0053334 0.30176 0.0058594 0.45312v1.5547h0.019531c1.0679 69.351 57.293 124.91 125.98 125.97v0.03125h4v-126h126v-4h-0.0293c-0.34376-22.497-6.4826-43.544-16.977-61.748a128 128 0 0 0-0.03906-0.068359c-2.0578-3.5647-4.2818-7.0194-6.6621-10.355a128 128 0 0 0-0.63477-0.86914c-2.2316-3.0728-4.5911-6.0467-7.0801-8.9043a128 128 0 0 0-1.2031-1.3516c-2.3865-2.6634-4.8784-5.2307-7.4766-7.6855a128 128 0 0 0-1.6094-1.4883c-2.6003-2.3746-5.2973-4.6429-8.0859-6.7988a128 128 0 0 0-1.6328-1.2461c-2.9197-2.1838-5.938-4.241-9.041-6.1738a128 128 0 0 0-1.3066-0.8125c-3.3207-2.0135-6.7412-3.875-10.248-5.5859a128 128 0 0 0-0.67969-0.33594c-3.7328-1.7939-7.5649-3.4123-11.484-4.8438a128 128 0 0 0-0.03125-0.013672v0.0019531c-13.085-4.7752-27.15-7.462-41.779-7.6875v-0.033203h-4zm0 18.648v29.383c-42.375 1.0478-76.93 35.238-77.975 77.969h-30.59c1.0589-58.579 48.671-106.31 108.56-107.35zm4 0c12.46 0.21651 24.388 2.4516 35.477 6.3867l-10.115 27.789c-7.953-2.9005-16.486-4.5742-25.361-4.793v-29.383zm0 39.744c7.668 0.21076 15.016 1.616 21.859 4.0527l-10.182 27.979c-3.6809-1.3451-7.6063-2.1628-11.678-2.3652v-29.666zm-4 0.001953v29.664c-20.288 1.0121-36.94 17.306-37.953 37.941h-30.33c1.0448-36.753 30.821-66.572 68.283-67.605zm102.07 22.943c6.4851 13.606 10.216 28.732 10.504 44.662h-30.594c-0.27792-11.364-2.9418-22.115-7.4766-31.809l27.566-12.854zm-36.428 16.986c4.0132 8.4449 6.3523 17.811 6.6328 27.676h-30.334c-0.26101-5.3191-1.5627-10.346-3.6953-14.9l27.396-12.775zm-65.641 0.091797v27.584h-28.25c0.99648-14.674 12.906-26.619 28.25-27.584zm4 0c2.8609 0.17908 5.6018 0.73752 8.1758 1.627l-8.1758 22.463v-24.09zm25.391 16.813c1.6096 3.3078 2.6056 6.9476 2.8652 10.771h-25.967l23.102-10.771zm-137.96 14.771h30.592c1.0523 42.723 35.603 76.921 77.973 77.969v29.383c-59.888-1.0445-107.5-48.779-108.56-107.35zm40.281 0h30.33c1.0206 20.629 17.671 36.931 37.953 37.943v29.662c-37.457-1.0338-67.23-30.859-68.283-67.605zm40.035 0h28.248v27.586c-15.338-0.96545-27.244-12.918-28.248-27.586zm142.26 14-47.473 86.529-38.764-24.395-9.5508 15.33 54.891 34.535 56.664-103.26-15.768-8.7383z"
                          transform="matrix(.12673 0 0 .11845 -19.96 253.7)"
                        />
                      </g>
                    </g>
                  </svg>
                </span>
                <span
                  class="c12"
                  data-testid="badge-icon"
                >
                  1
                </span>
              </div>
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
  <section
    class="entity-section"
  >
    <div
      class="c13 c14 section-header"
    >
      <h2
        class="c15 c16"
      >
        <div
          class="c17 c18"
        >
          <span
            class="c19"
            data-testid="svg-icon"
          >
            <svg
              height="1em"
              viewBox="0 0 67.733 67.733"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                transform="translate(0 -229.27)"
              >
                <path
                  class="gui_icon_class"
                  d="m64 16v16.004h-63.998l-0.0019531 224h144v-15.996h-128l0.001953-192h48.002v16h64v-16h48v144h16.004v-160h-64.004v-16.004h-64zm-16 64v16h96v-16h-96zm0 32v16h96v-16h-96zm0 32v16h96v-16h-96zm192.23 0-47.473 86.529-38.764-24.395-9.5508 15.33 54.891 34.535 56.664-103.26-15.768-8.7383zm-192.23 32v16h96v-16h-96z"
                  transform="matrix(.26458 0 0 .26458 0 229.27)"
                />
              </g>
            </svg>
          </span>
        </div>
        <div
          class="c17 c20"
        >
          Audit: foo
        </div>
      </h2>
      <div
        class="c21"
      >
        <div
          class="c22"
        >
          <div
            class="c2 c23"
          >
            <div>
              ID:
            </div>
            <div>
              12345
            </div>
            <div>
              Created:
            </div>
            <div>
              Tue, Jul 16, 2019 8:31 AM CEST
            </div>
            <div>
              Modified:
            </div>
            <div>
              Tue, Jul 16, 2019 8:44 AM CEST
            </div>
            <div>
              Owner:
            </div>
            <span>
              admin
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c24"
    >
      <div
        class="c25 c26"
      >
        <div
          class="c27"
        >
          <div
            class="c28"
          >
            Information
          </div>
          <div
            class="c29"
          >
            <div
              class="c30"
            >
              <span>
                Permissions
              </span>
              <span
                class="c31"
              >
                (
                <i>
                  0
                </i>
                )
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c32"
      >
        <table
          class="c33 c34"
        >
          <colgroup>
            <col
              class="c35"
              width="10%"
            />
            <col
              class="c36"
              width="90%"
            />
          </colgroup>
          <tbody
            class=""
          >
            <tr>
              <td>
                <div
                  class="c32"
                >
                  Name
                </div>
              </td>
              <td>
                <div
                  class="c32"
                >
                  foo
                </div>
              </td>
            </tr>
            <tr>
              <td>
                <div
                  class="c32"
                >
                  Comment
                </div>
              </td>
              <td>
                <div
                  class="c32"
                >
                  bar
                </div>
              </td>
            </tr>
            <tr>
              <td>
                <div
                  class="c32"
                >
                  Alterable
                </div>
              </td>
              <td>
                <div
                  class="c32"
                >
                  Yes
                </div>
              </td>
            </tr>
            <tr>
              <td>
                <div
                  class="c32"
                >
                  Status
                </div>
              </td>
              <td>
                <div
                  class="c32"
                >
                  <a
                    class="c8 c37"
                    data-testid="details-link"
                    href="/report/1234"
                  >
                    <div
                      class="c38"
                      data-testid="progressbar-box"
                      title="Done"
                    >
                      <div
                        background="low"
                        class="c39"
                        data-testid="progress"
                      />
                      <div
                        class="c40"
                      >
                        <span
                          class="c41"
                        >
                          Done
                        </span>
                      </div>
                    </div>
                  </a>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
        <div
          class="c24"
        >
          <div
            class="c32"
          >
            <h2>
              Target
            </h2>
            <div>
              <a
                class="c8"
                data-testid="details-link"
                href="/target/5678"
              >
                target1
              </a>
            </div>
          </div>
          <div
            class="c32"
          >
            <h2>
              Alerts
            </h2>
            <div>
              <div
                class="c2 c3"
              >
                <div
                  class="c2 c6 c42"
                >
                  <span>
                    <a
                      class="c8"
                      data-testid="details-link"
                      href="/alert/91011"
                    >
                      alert1
                    </a>
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            class="c32"
          >
            <h2>
              Scanner
            </h2>
            <div>
              <table
                class="c43 c34"
              >
                <colgroup>
                  <col
                    class="c35"
                    width="10%"
                  />
                  <col
                    class="c36"
                    width="90%"
                  />
                </colgroup>
                <tbody
                  class=""
                >
                  <tr>
                    <td>
                      <div
                        class="c32"
                      >
                        Name
                      </div>
                    </td>
                    <td>
                      <div
                        class="c32"
                      >
                        <span>
                          <a
                            class="c8"
                            data-testid="details-link"
                            href="/scanner/1516"
                          >
                            scanner1
                          </a>
                        </span>
                      </div>
                    </td>
                  </tr>
                  <tr>
                    <td>
                      <div
                        class="c32"
                      >
                        Type
                      </div>
                    </td>
                    <td>
                      <div
                        class="c32"
                      >
                        OpenVAS Scanner
                      </div>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
          <div
            class="c32"
          >
            <h2>
              Assets
            </h2>
            <div>
              <table
                class="c43 c34"
              >
                <colgroup>
                  <col
                    class="c35"
                    width="10%"
                  />
                  <col
                    class="c36"
                    width="90%"
                  />
                </colgroup>
                <tbody
                  class=""
                >
                  <tr>
                    <td>
                      <div
                        class="c32"
                      >
                        Add to Assets
                      </div>
                    </td>
                    <td>
                      <div
                        class="c32"
                      >
                        Yes
                      </div>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
          <div
            class="c32"
          >
            <h2>
              Scan
            </h2>
            <div>
              <table
                class="c43 c34"
              >
                <colgroup>
                  <col
                    class="c35"
                    width="10%"
                  />
                  <col
                    class="c36"
                    width="90%"
                  />
                </colgroup>
                <tbody
                  class=""
                >
                  <tr>
                    <td>
                      <div
                        class="c32"
                      >
                        Duration of last Scan
                      </div>
                    </td>
                    <td>
                      <div
                        class="c32"
                      >
                        2 minutes
                      </div>
                    </td>
                  </tr>
                  <tr>
                    <td>
                      <div
                        class="c32"
                      >
                        Auto delete Reports
                      </div>
                    </td>
                    <td>
                      <div
                        class="c32"
                      >
                        Do not automatically delete reports
                      </div>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`Audit ToolBarIcons tests > should render 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c2 {
  margin-left: -10px;
}

.c2>* {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c2>* {
  margin-left: 10px;
}

.c4 {
  margin-left: -5px;
}

.c4>* {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c4>* {
  margin-left: 5px;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c7 {
  cursor: pointer;
}

.c8 svg path {
  fill: #bfbfbf;
}

.c5 {
  height: 16px;
  width: 16px;
  line-height: 16px;
}

.c5 * {
  height: inherit;
  width: inherit;
}

.c9 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-right: 0px;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: absolute;
  font-size: 10px;
  background-color: red;
  font-weight: bold;
  border-radius: 10px;
  min-width: 10px;
  padding: 3px 5px;
  z-index: 1;
  background-color: #11ab51;
  color: #fff;
  bottom: -8px;
  right: 0px;
}

@media print {
  .c7 {
    display: none;
  }
}

<div
  class="c0 c1"
>
  <div
    class="c0 c2"
  >
    <div
      class="c0 c1"
    >
      <div
        class="c3 c4"
      >
        <a
          href="test/en/compliance-and-special-scans.html#configuring-and-managing-audits"
          rel="noopener noreferrer"
          target="_blank"
        >
          <span
            class="c5"
            data-testid="svg-icon"
            title="Help: Audits"
          >
            <svg
              height="1em"
              title="Help: Audits"
              viewBox="0 0 67.733 67.733"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                transform="translate(0 -229.27)"
              >
                <g
                  transform="matrix(2.0878 0 0 2.2337 41.673 -337.41)"
                >
                  <path
                    class="gui_icon_class"
                    d="m128 0.0078125c-70.26 0-128.01 57.023-128.01 127.98 0 70.961 57.75 128 128.01 128s127.99-57.041 127.99-128c0-70.961-57.734-127.98-127.99-127.98zm0 18.615c61.514 0 110.6 49.228 110.6 109.37 0 60.141-49.082 109.38-110.6 109.38-61.514 0-110.59-49.244-110.59-109.38 0-60.141 49.08-109.37 110.59-109.37zm0 32.318c-25.902 0-48.008 21.06-48.008 47.998h21.27c1e-5 -13.514 11.367-25.244 26.738-25.244s26.725 11.73 26.725 25.244-11.354 25.244-26.725 25.244v0.1211h-11.004v40.078h22v-18.746c20.858-4.9593 36.996-23.676 36.996-46.697 0-26.938-22.091-47.998-47.992-47.998zm-11.004 132.12v22h22v-22h-22z"
                    transform="matrix(.12673 0 0 .11845 -19.96 253.7)"
                  />
                </g>
              </g>
            </svg>
          </span>
        </a>
        <a
          class="c6"
          href="/audits"
        >
          <span
            class="c5"
            data-testid="svg-icon"
            title="Audit List"
          >
            <svg
              height="1em"
              title="Audit List"
              viewBox="0 0 67.733 67.733"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                transform="translate(0 -229.27)"
              >
                <path
                  class="gui_icon_class"
                  d="m0 0v16h16v-16h-16zm64 0v16h192v-16h-192zm-64 48v16h16v-16h-16zm64 0v16h192v-16h-192zm-64 48v16h16v-16h-16zm64 0v16h192v-16h-192zm-64 48v16h16v-16h-16zm64 0v16h192v-16h-192zm-64 48v16h16v-16h-16zm64 0v16h192v-16h-192zm0 47.91v16.09h192v-16.09h-192zm-64 0.08984v16h16v-16h-16z"
                  transform="matrix(.26458 0 0 .26458 0 229.27)"
                />
              </g>
            </svg>
          </span>
        </a>
        <span
          class="c5"
          data-testid="svg-icon"
          title="This is an Alterable Audit. Reports may not relate to current Policy or Target!"
        >
          <svg
            height="1em"
            title="This is an Alterable Audit. Reports may not relate to current Policy or Target!"
            viewBox="0 0 67.733 67.733"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              transform="translate(0 -229.27)"
            >
              <path
                class="gui_icon_class"
                d="m221.48-0.048828-137.1 137.1-16.971 50.912 50.912-16.971 137.1-137.1-33.941-33.943zm-221.48 16.049v240h192v-128h-16.006v112.01h-160v-208.01h144.01v-15.996h-160zm221.48 6.5781 11.316 11.316-123.12 123.12-16.979 5.6602 5.6621-16.977 123.12-123.12z"
                transform="matrix(.26458 0 0 .26458 0 229.27)"
              />
            </g>
          </svg>
        </span>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c0 c4"
      >
        <span
          class="c7 c5"
          data-testid="svg-icon"
          title="Clone Audit"
        >
          <svg
            height="1em"
            title="Clone Audit"
            viewBox="0 0 67.733 67.733"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              transform="translate(0 -229.27)"
            >
              <g
                transform="matrix(2.0878 0 0 2.2337 41.673 -337.41)"
              >
                <path
                  class="gui_icon_class"
                  d="m141.4 30.168c-1.4823-0.007128-2.9616 0.058813-4.4277 0.19531-11.954 1.113-24.138 7.7033-30.455 19.439-3.1389-1.2367-6.4575-1.9437-9.7246-2.0273-6.9908-0.17898-14.065 1.7188-20.543 5.0117-6.4783 3.293-12.405 8.008-16.613 14.264-4.208 6.2557-6.5548 14.557-4.6406 22.984l1.2305 2.5137c-3.9083-2.1455-8.4203-3.0951-13.154-3.0645-22.218 0.1437-49.323 21.857-41.805 42.627 6.5566 18.113 33.687 25.742 51.877 17.924l-1.6309 8.3789c8.3106 16.995 22.298 28.418 36.08 32.994 2.2111 0.73419 4.4295 1.2763 6.6406 1.6367l2.3809 31.088h16.699l2.1504-36.199c0.59144-0.51742 1.168-1.059 1.7188-1.6367 1.0854 0.71505 1.6102 1.7819 2.8672 2.5215 4.895 2.8803 10.954 5.4562 17.707 6.5469 6.7531 1.0907 14.352 0.64667 21.453-3.1328 5.0524-2.689 9.2812-7.6487 12.932-13.637 4.2379 2.5642 8.7392 4.5584 13.369 5.8047l3.4434 39.473h16.699l0.50195-39.367c12.105-3.3622 22.875-12.778 27.693-26.949 5.323-3.9336 10.102-8.8803 13.656-15.482 4.1614-7.7308 7.1974-16.744 8.1367-25.971 0.93933-9.2265-0.24635-18.982-5.5938-27.008-4.2192-6.3321-11.496-10.234-20.082-12.367-1.078-15.688-10.766-29.391-23.041-36.885-7.1074-4.3388-15.248-6.7759-23.488-5.5566-5.0031 0.74038-9.6574 3.5063-13.885 7.2383-7.2505-7.7007-17.777-11.308-28.152-11.357zm-1.1484 16.566c9.6588-0.26618 18.616 4.1856 21.471 10.951l13.701 0.82422c3.0058-5.4246 6.1954-7.2504 10.127-7.832 3.9316-0.58167 8.9212 0.6187 13.715 3.5449 9.5874 5.8526 16.946 17.994 15.736 27.799l7.1055 9.332c8.8204 0.69901 12.888 3.6439 15.35 7.3379 2.4614 3.694 3.4632 9.1624 2.8047 15.631-0.65857 6.4685-3.0136 13.637-6.1641 19.49s-7.2404 10.282-9.9102 11.822l-3.7754 5.0293c-2.7665 10.458-10.248 16.202-19.559 18.17-9.3106 1.9676-19.852-0.694-26.354-7.0234l-12.346 2.9512c-2.8351 7.32-6.2459 10.738-9.832 12.646-3.5862 1.9086-7.7828 2.3215-12.252 1.5996-4.4692-0.7218-9.0518-2.617-12.561-4.6816-3.5088-2.0646-6.1567-5.1549-5.625-4.2715l-13.84 1.8476c-0.87687 2.7976-1.9448 3.7186-4.4707 4.5176-2.526 0.79948-6.6576 0.74492-11.389-0.82617-8.2912-2.7532-17.465-10.54-23.934-20.873 8.2134-9.2351 13.878-19.863 14.562-31.428 0.76866-12.994-4.0708-26.013-12.699-37.561-0.6001-3.1117-0.06326-5.8298 2.082-9.0195 2.2398-3.3298 6.1823-6.6767 10.695-8.9707 4.513-2.294 9.5525-3.514 13.531-3.4121 3.9788 0.10215 6.4642 1.3098 7.875 3.082l13.516-3.9238c1.7112-10.295 10.121-15.671 20.498-16.637 0.64856-0.060382 1.2955-0.099441 1.9395-0.11719zm-92.283 56.48a9.335 9.6514 0 0 1 4.1699 10.605 9.335 9.6514 0 0 1-8.5586 7.2617 9.335 9.6514 0 0 1-9.248-6.2969 9.335 9.6514 0 0 1 3.0762-10.998l10.561-0.57227z"
                  transform="matrix(.12673 0 0 .11845 -19.96 253.7)"
                />
              </g>
            </g>
          </svg>
        </span>
        <span
          class="c7 c5"
          data-testid="svg-icon"
          title="Edit Audit"
        >
          <svg
            height="1em"
            title="Edit Audit"
            viewBox="0 0 67.733 67.733"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              transform="translate(0 -229.27)"
            >
              <path
                class="gui_icon_class"
                d="m221.48-0.048828-137.1 137.1-16.971 50.912 50.912-16.971 137.1-137.1-33.941-33.943zm-221.48 16.049v240h192v-128h-16.006v112.01h-160v-208.01h144.01v-15.996h-160z"
                transform="matrix(.26458 0 0 .26458 0 229.27)"
              />
            </g>
          </svg>
        </span>
        <span
          class="c7 c5"
          data-testid="svg-icon"
          title="Move Audit to trashcan"
        >
          <svg
            height="1em"
            title="Move Audit to trashcan"
            viewBox="0 0 67.733 67.733"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              transform="translate(0 -229.27)"
            >
              <g
                transform="matrix(2.0878 0 0 2.2337 41.673 -337.41)"
              >
                <path
                  class="gui_icon_class"
                  d="m80 0v16 16h-80v16h256v-16h-80v-16-16h-96zm16 16h64v16h-64v-16zm-80 48 16.975 192.27h190.04l16.982-192.27h-16l-16 176h-160l-16-176h-16zm72 0v160h16v-160h-16zm64 0v160h16v-160h-16z"
                  transform="matrix(.12673 0 0 .11845 -19.96 253.7)"
                />
              </g>
            </g>
          </svg>
        </span>
        <span
          class="c7 c5"
          data-testid="svg-icon"
          title="Export Audit as XML"
        >
          <svg
            height="1em"
            title="Export Audit as XML"
            viewBox="0 0 67.733 67.733"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              transform="translate(0 -229.27)"
            >
              <path
                class="gui_icon_class"
                d="m182.84 0-22.627 22.627 34.912 34.912 0.00586 0.41797c-52.297 0.87749-90.488 16.002-114.25 45.082-24.491 29.975-32.506 71.388-32.887 120.84l32.002 0.25c0.35407-46.001 8.3412-79.632 25.666-100.84 16.754-20.505 43.317-32.56 89.543-33.332l-35.123 35.121 22.627 22.629 73.539-73.539-0.25-0.25 0.37891-0.37891-73.539-73.539zm-182.84 63.996v192h240v-48h-15.996v32.004h-208.01v-160h48.004v-16.004h-64z"
                transform="matrix(.26458 0 0 .26458 0 229.27)"
              />
            </g>
          </svg>
        </span>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c0 c4"
      >
        <span
          class="c7 c5"
          data-testid="svg-icon"
          title="Start"
        >
          <svg
            height="1em"
            title="Start"
            viewBox="0 0 67.733 67.733"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              transform="translate(0 -229.27)"
            >
              <g
                transform="matrix(2.0878 0 0 2.2337 41.673 -337.41)"
              >
                <path
                  class="gui_icon_class"
                  d="m16.008 0.32031v255.46l12.791-7.2891 211.29-120.45zm16.104 27.708 179.77 99.972-179.77 100.03z"
                  transform="matrix(.12673 0 0 .11845 -19.96 253.7)"
                />
              </g>
            </g>
          </svg>
        </span>
        <span
          alt="Resume"
          class="c8 c5"
          data-testid="svg-icon"
          title="Audit is not stopped"
        >
          <svg
            height="1em"
            title="Audit is not stopped"
            viewBox="0 0 67.733 67.733"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              transform="translate(0 -229.27)"
            >
              <g
                transform="matrix(2.0878 0 0 2.2337 41.673 -337.41)"
              >
                <path
                  class="gui_icon_class"
                  d="m0 0v256h48v-256h-48zm64 0.32031v255.46l192.09-127.74-192.09-127.72zm-48 15.68h16v224h-16v-224zm64 13.643 152 98.357-151.71 98.945-0.29492-197.3z"
                  transform="matrix(.12673 0 0 .11845 -19.96 253.7)"
                />
              </g>
            </g>
          </svg>
        </span>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c0 c2"
      >
        <div
          class="c0 c1"
        >
          <div
            class="c0 c4"
          >
            <a
              class="c6"
              data-testid="details-link"
              href="/report/1234"
              title="Last Report for Audit foo from 07/30/2019"
            >
              <span
                class="c5"
                data-testid="svg-icon"
              >
                <svg
                  height="1em"
                  viewBox="0 0 67.733 67.733"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    transform="translate(0 -229.27)"
                  >
                    <g
                      transform="matrix(2.0878 0 0 2.2337 41.673 -337.41)"
                    >
                      <path
                        class="gui_icon_class"
                        d="m126 0v0.033203c-68.692 1.0632-124.92 56.609-125.98 125.97h-0.019531v1.5391c-5.2597e-4 0.15137-0.0058594 0.30163-0.0058594 0.45313 0 0.15149 0.0053334 0.30176 0.0058594 0.45312v1.5547h0.019531c1.0782 70.024 58.387 125.99 127.98 125.99v0.00586h16 112v-16-96-16h-0.00195v-0.00781c0-27.723-8.8123-53.318-23.74-74.217a128 128 0 0 0-0.58593-0.79883c-2.2415-3.0874-4.6102-6.0752-7.1113-8.9453a128 128 0 0 0-1.1602-1.3008c-2.3961-2.6756-4.8982-5.2535-7.5078-7.7188a128 128 0 0 0-1.5645-1.4512c-2.6165-2.3911-5.3333-4.6741-8.1406-6.8438a128 128 0 0 0-1.5879-1.2129c-2.9306-2.1931-5.9609-4.2571-9.0762-6.1973a128 128 0 0 0-1.2832-0.79883c-3.326-2.0174-6.7548-3.8819-10.268-5.5957a128 128 0 0 0-0.66602-0.33008c-3.7366-1.7961-7.5725-3.4166-11.496-4.8496a128 128 0 0 0-0.03125-0.013672v0.0019531c-13.085-4.7752-27.151-7.462-41.779-7.6875v-0.033203h-4zm4 18.646c12.46 0.2164 24.388 2.4537 35.477 6.3887l-10.115 27.789c-7.9536-2.9007-16.486-4.5744-25.361-4.793v-29.385zm-4 0.001954v29.383c-42.375 1.0478-76.93 35.238-77.975 77.969h-30.59c1.0589-58.579 48.671-106.31 108.56-107.35zm0 39.746v29.664c-20.288 1.0121-36.94 17.306-37.953 37.941h-30.33c1.0448-36.753 30.821-66.572 68.283-67.605zm4 0c7.6686 0.21072 15.017 1.6138 21.861 4.0508l-10.184 27.977c-3.6814-1.3451-7.6061-2.1629-11.678-2.3652v-29.662zm98.07 22.941c6.7555 14.172 10.529 29.994 10.529 46.656v0.00781h-30.594v-0.00781c0-12.099-2.7025-23.542-7.502-33.801l27.566-12.855zm-36.426 16.986c4.2842 9.0136 6.6836 19.071 6.6836 29.67 0 0.00261 1e-5 0.00519 0 0.00781h-30.33v-0.00781c0-6.057-1.3541-11.774-3.752-16.895l27.398-12.775zm-65.645 0.09375v27.584h-28.25c0.99648-14.674 12.906-26.619 28.25-27.584zm4 0c2.8606 0.17912 5.602 0.7377 8.1758 1.627l-8.1758 22.463v-24.09zm25.395 16.809c1.8884 3.8788 2.9394 8.2136 2.9394 12.768 0 0.00261 1e-5 0.00519 0 0.00781h-14.334-14v-0.93359l25.395-11.842zm-137.96 14.775h30.592c1.0688 43.394 36.696 77.992 79.973 77.994v29.383c-60.826-0.00206-109.49-48.154-110.56-107.38zm40.281 0h30.33c1.0538 21.303 18.776 37.992 39.953 37.994v29.662c-38.394-0.00206-69.212-30.256-70.283-67.656zm40.035 0h30.248v27.656c-16.294-0.00198-29.201-12.355-30.248-27.656zm46.248 14h96v96h-96v-96zm16 16v16h64v-16h-64zm0 32v16h64v-16h-64z"
                        transform="matrix(.12673 0 0 .11845 -19.96 253.7)"
                      />
                    </g>
                  </g>
                </svg>
              </span>
            </a>
            <a
              class="c6"
              href="/reports?filter=task_id%3D12345"
              title="Total Reports for Audit foo"
            >
              <div
                class="c9"
              >
                <span
                  class="c5"
                  data-testid="svg-icon"
                >
                  <svg
                    height="1em"
                    viewBox="0 0 67.733 67.733"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g
                      transform="translate(0 -229.27)"
                    >
                      <g
                        transform="matrix(2.0878 0 0 2.2337 41.673 -337.41)"
                      >
                        <path
                          class="gui_icon_class"
                          d="m126 0v0.033203c-68.692 1.0632-124.92 56.609-125.98 125.97h-0.019531v1.5391c-5.2597e-4 0.15137-0.0058594 0.30163-0.0058594 0.45313 0 0.15149 0.0053334 0.30176 0.0058594 0.45312v1.5547h0.019531c1.0782 70.024 58.387 125.99 127.98 125.99v0.00586h16 112v-16-96-16h-0.00195v-0.00781c0-27.723-8.8123-53.318-23.74-74.217a128 128 0 0 0-0.58593-0.79883c-2.2415-3.0874-4.6102-6.0752-7.1113-8.9453a128 128 0 0 0-1.1602-1.3008c-2.3961-2.6756-4.8982-5.2535-7.5078-7.7188a128 128 0 0 0-1.5645-1.4512c-2.6165-2.3911-5.3333-4.6741-8.1406-6.8438a128 128 0 0 0-1.5879-1.2129c-2.9306-2.1931-5.9609-4.2571-9.0762-6.1973a128 128 0 0 0-1.2832-0.79883c-3.326-2.0174-6.7548-3.8819-10.268-5.5957a128 128 0 0 0-0.66602-0.33008c-3.7366-1.7961-7.5725-3.4166-11.496-4.8496a128 128 0 0 0-0.03125-0.013672v0.0019531c-13.085-4.7752-27.151-7.462-41.779-7.6875v-0.033203h-4zm4 18.646c12.46 0.2164 24.388 2.4537 35.477 6.3887l-10.115 27.789c-7.9536-2.9007-16.486-4.5744-25.361-4.793v-29.385zm-4 0.001954v29.383c-42.375 1.0478-76.93 35.238-77.975 77.969h-30.59c1.0589-58.579 48.671-106.31 108.56-107.35zm0 39.746v29.664c-20.288 1.0121-36.94 17.306-37.953 37.941h-30.33c1.0448-36.753 30.821-66.572 68.283-67.605zm4 0c7.6686 0.21072 15.017 1.6138 21.861 4.0508l-10.184 27.977c-3.6814-1.3451-7.6061-2.1629-11.678-2.3652v-29.662zm98.07 22.941c6.7555 14.172 10.529 29.994 10.529 46.656v0.00781h-30.594v-0.00781c0-12.099-2.7025-23.542-7.502-33.801l27.566-12.855zm-36.426 16.986c4.2842 9.0136 6.6836 19.071 6.6836 29.67 0 0.00261 1e-5 0.00519 0 0.00781h-30.33v-0.00781c0-6.057-1.3541-11.774-3.752-16.895l27.398-12.775zm-65.645 0.09375v27.584h-28.25c0.99648-14.674 12.906-26.619 28.25-27.584zm4 0c2.8606 0.17912 5.602 0.7377 8.1758 1.627l-8.1758 22.463v-24.09zm25.395 16.809c1.8884 3.8788 2.9394 8.2136 2.9394 12.768 0 0.00261 1e-5 0.00519 0 0.00781h-14.334-14v-0.93359l25.395-11.842zm-137.96 14.775h30.592c1.0688 43.394 36.696 77.992 79.973 77.994v29.383c-60.826-0.00206-109.49-48.154-110.56-107.38zm40.281 0h30.33c1.0538 21.303 18.776 37.992 39.953 37.994v29.662c-38.394-0.00206-69.212-30.256-70.283-67.656zm40.035 0h30.248v27.656c-16.294-0.00198-29.201-12.355-30.248-27.656zm46.248 14h96v96h-96v-96zm16 16v16h64v-16h-64zm0 32v16h64v-16h-64z"
                          transform="matrix(.12673 0 0 .11845 -19.96 253.7)"
                        />
                      </g>
                    </g>
                  </svg>
                </span>
                <span
                  class="c10"
                  data-testid="badge-icon"
                >
                  1
                </span>
              </div>
            </a>
          </div>
        </div>
        <a
          class="c6"
          href="/results?filter=task_id%3D12345"
          title="Results for Audit foo"
        >
          <div
            class="c9"
          >
            <span
              class="c5"
              data-testid="svg-icon"
            >
              <svg
                height="1em"
                viewBox="0 0 67.733 67.733"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  transform="translate(0 -229.27)"
                >
                  <g
                    transform="matrix(2.0878 0 0 2.2337 41.673 -337.41)"
                  >
                    <path
                      class="gui_icon_class"
                      d="m126 0v0.033203c-68.692 1.0632-124.92 56.609-125.98 125.97h-0.019531v1.5391c-5.2597e-4 0.15137-0.0058594 0.30163-0.0058594 0.45313 0 0.15149 0.0053334 0.30176 0.0058594 0.45312v1.5547h0.019531c1.0679 69.351 57.293 124.91 125.98 125.97v0.03125h4v-126h126v-4h-0.0293c-0.34376-22.497-6.4826-43.544-16.977-61.748a128 128 0 0 0-0.03906-0.068359c-2.0578-3.5647-4.2818-7.0194-6.6621-10.355a128 128 0 0 0-0.63477-0.86914c-2.2316-3.0728-4.5911-6.0467-7.0801-8.9043a128 128 0 0 0-1.2031-1.3516c-2.3865-2.6634-4.8784-5.2307-7.4766-7.6855a128 128 0 0 0-1.6094-1.4883c-2.6003-2.3746-5.2973-4.6429-8.0859-6.7988a128 128 0 0 0-1.6328-1.2461c-2.9197-2.1838-5.938-4.241-9.041-6.1738a128 128 0 0 0-1.3066-0.8125c-3.3207-2.0135-6.7412-3.875-10.248-5.5859a128 128 0 0 0-0.67969-0.33594c-3.7328-1.7939-7.5649-3.4123-11.484-4.8438a128 128 0 0 0-0.03125-0.013672v0.0019531c-13.085-4.7752-27.15-7.462-41.779-7.6875v-0.033203h-4zm0 18.648v29.383c-42.375 1.0478-76.93 35.238-77.975 77.969h-30.59c1.0589-58.579 48.671-106.31 108.56-107.35zm4 0c12.46 0.21651 24.388 2.4516 35.477 6.3867l-10.115 27.789c-7.953-2.9005-16.486-4.5742-25.361-4.793v-29.383zm0 39.744c7.668 0.21076 15.016 1.616 21.859 4.0527l-10.182 27.979c-3.6809-1.3451-7.6063-2.1628-11.678-2.3652v-29.666zm-4 0.001953v29.664c-20.288 1.0121-36.94 17.306-37.953 37.941h-30.33c1.0448-36.753 30.821-66.572 68.283-67.605zm102.07 22.943c6.4851 13.606 10.216 28.732 10.504 44.662h-30.594c-0.27792-11.364-2.9418-22.115-7.4766-31.809l27.566-12.854zm-36.428 16.986c4.0132 8.4449 6.3523 17.811 6.6328 27.676h-30.334c-0.26101-5.3191-1.5627-10.346-3.6953-14.9l27.396-12.775zm-65.641 0.091797v27.584h-28.25c0.99648-14.674 12.906-26.619 28.25-27.584zm4 0c2.8609 0.17908 5.6018 0.73752 8.1758 1.627l-8.1758 22.463v-24.09zm25.391 16.813c1.6096 3.3078 2.6056 6.9476 2.8652 10.771h-25.967l23.102-10.771zm-137.96 14.771h30.592c1.0523 42.723 35.603 76.921 77.973 77.969v29.383c-59.888-1.0445-107.5-48.779-108.56-107.35zm40.281 0h30.33c1.0206 20.629 17.671 36.931 37.953 37.943v29.662c-37.457-1.0338-67.23-30.859-68.283-67.605zm40.035 0h28.248v27.586c-15.338-0.96545-27.244-12.918-28.248-27.586zm142.26 14-47.473 86.529-38.764-24.395-9.5508 15.33 54.891 34.535 56.664-103.26-15.768-8.7383z"
                      transform="matrix(.12673 0 0 .11845 -19.96 253.7)"
                    />
                  </g>
                </g>
              </svg>
            </span>
            <span
              class="c10"
              data-testid="badge-icon"
            >
              1
            </span>
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;
